fixed some spacing issues and refactored bio

--- a/assets/css/resume-style.css
+++ b/assets/css/resume-style.css
@@ -150,7 +150,7 @@ body.scale-cv{
 
 .scale-cv .education__time,
 .scale-cv .experience__time{
-  padding-right: .5rem
+  padding-right: .5rem;
 }
 
 .scale-cv .education__rounder,
@@ -169,7 +169,7 @@ body.scale-cv{
 
 .scale-cv .education__data,
 .scale-cv .experience__data{
-  gap: .25 rem;
+  gap: .25rem;
 }
 
 .scale-cv .skills__name{
@@ -238,7 +238,7 @@ img{
 
 .bd-grid{
   display: grid;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .l-header{
